# php-ext-libtrie

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  CREDITS  Makefile  Makefile.objects  README.md  aclocal.m4  config.h  config.h.in  config.h.in~  config.m4  config.status  config.w32  configure  libtool  libtrie.la  libtrie.php  php_libtrie.c  php_libtrie.h  php_libtrie.lo  run-tests.php  setversion.sh  yatrie_test.php
.libs/: libtrie.lai
autom4te.cache/: output.0  requests  traces.0
tests/: 001.phpt
